public/assets/style.css
/* ... */
@media screen and (-webkit-min-device-pixel-ratio: 0) {
    .left-sec a.site-branding {
        position: sticky;
        width: 100px;
        display: inline-block;
        margin-left: 40px;
    }
}

@media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
    .left-sec a.site-branding {  width: 100px; }
}
 


.left-sec h3.tagline-head {
    top: 13%;
    position: relative;
    text-transform: uppercase;
    font-size: 18px;
}
.left-sec a.site-branding img,
.left-sec h3,
#accordion2 .panel-title,
ul.getting-start-list {
    margin-left: 17%;
}
#accordion2 .panel-body {
    padding: 0;
}
#accordion2 .panel-title {
    /*margin-top: 22px;*/
}
.panel-group {
    margin-bottom: 0;
}
.menu-accordion .panel-default > .panel-heading,
.menu-accordion .panel-group .panel {
    background: none;
    box-shadow: none;
    padding: 12px 0 2px;
    /*padding: 12px 0;*/
}
.menu-accordion .panel-group .panel-heading + .panel-collapse > .panel-body {
    border: 0;
}
.menu-accordion .panel-default {
    padding: 11px 0;
}
.menu-accordion .panel-title h6 {
    font-size: 16px;
    color: #fff;
    text-transform: uppercase;
    clear: none;
    position: relative;
    top: 5px;
}
.menu-accordion .panel-title figure {
    height: 44px;
    width: 44px;
    border-radius: 50%;
    border: 1px solid #ffffff;
    text-align: center;
    line-height: 2.3;
    display: block;
    background: #403240;
    z-index: 10;
    float: left;
    margin-right: 10px;
}
.menu-accordion .panel-title figure img {
    width: 25px;
}
ul.getting-start-list {
    padding-left: 0;
    margin-top: 10px;
    margin-bottom: 18px;
    min-height: 118px;
}
ul.getting-start-list li {
    font-weight: 300;
    font-size: 13px;
    /*line-height: 10px;*/
    
    text-transform: capitalize;
    padding-bottom: 10px;
    cursor: pointer;
    padding-left: 35px;
}
ul.getting-start-list a {
    color: #ffffff;
}
ul.getting-start-list li:hover span.circle-span {
    background: #ffffff;
}
span.circle-span {
    height: 10px;
    width: 10px;
    border-radius: 50%;
    border: 1px solid #ffffff;
    display: block;
    float: left;
    margin-right: 8px;
    position: relative;
    top: 5px;
}
span.circle-span.complete {
    background: #ffffff;
}
.menu-accordion .panel-group .panel-faq.active {
    background: #3b2b3b;
    position: relative;
    margin-bottom: 14px;
    margin-top: 25px;
}
.menu-accordion .panel-group .panel.active:last-child::after {
    height: 247px;
}
.menu-accordion .panel-group .panel:first-child {
    margin-top: 0;
}
.menu-accordion .panel-group .panel-faq.active::after {
    background: url('images/panel-active-bg.png');
    content: '';
    background-size: cover;
    background-position: center center;
    display: block;
    position: absolute;
    right: -25px;
    top: 0;
    width: 25px;
    height: 218px;
    z-index: 10;
}
/*Mid Section*/
/*Level 2*/

ul.apps-icons li.pad-adjust {
    padding-top: 40px;
}
a.back-link, a.front-link {
    text-transform: capitalize;
    font-size: 18px;
    line-height: 30px;
    margin-top: 35px;
    font-weight: 500;
}

.progress-img-adj {
    margin-bottom: 27px;
}

a.back-link,
a.back-link i,
a.front-link,
a.front-link i {
    color: #ffffff;
}

a.back-link i {
    padding-right: 10px;
}

a.front-link i {
    padding-left: 10px;
}

/*Step one*/

.step-one h1 {
    text-transform: capitalize;
    margin-top: 24px;
    margin-bottom: 18px;
}
.step-one p {
    font-weight: 300;
    margin-bottom: 20px;
}
.btn-wrap {
    text-align: center;
    margin-top: 50px;
}
.level-3-oper-5 .btn-wrap {
    margin-bottom: 36px;
}

.step-one .btn {
    background: #4b384b;
    border-color: #4b384b;
    color: #ffffff;
    font-size: 18px;
    line-height: 1.5;
    padding: 10px 43px;
    border-radius: 25px;
    transition-property: background, border;
    transition-duration: 0.5s;
    font-weight: 300;
}
.step-one .btn:hover {
    background: none;
    border-color: #ffffff;
}


/*Step 2*/

ul.apps-icons {
    margin: 28px 0 0 0;
    padding: 0;
}
ul.apps-icons li {
    display: inline-block;
    border: 1px solid #ffffff;
    text-align: center;
    border-radius: 10px;
    padding: 30px 10px;
    min-height: 161px;
   /* min-height: 159px;*/
    float: left;
    margin: 0 12px 12px 0;
    min-width: 165px;
    position: relative;
    cursor: pointer;
    transition-property: background;
    transition-duration: 0.5s;
}
ul.apps-icons li:first-child {
    padding-top: 40px;
}
ul.apps-icons li span {
    font-size: 16px;
}
ul.apps-icons li a,
ul.apps-icons li span {
    display: block;
}
ul.apps-icons img {
    margin-bottom: 18px;
}
ul.apps-icons li a {
    color: #ffffff;
}
.level-2 .mid-sec .btn-wrap {
    margin-top: 20px;
}
ul.apps-icons li.active {
    background: #ffffff;
}
ul.apps-icons li.active a.white-icon {
    display: none;
}
ul.apps-h-effect li a.red-icon {
    display: none;
}
ul.apps-h-effect li:hover a.white-icon {
    display: none;
}
ul.apps-h-effect li:hover {
    background: #ffffff;
}
ul.apps-h-effect li:hover a.red-icon {
    display: block;
}
ul.apps-h-effect li:hover span a {
    color: #bf696e;
}
ul.apps-icons li:hover .apps-question {
    background: #d9a5a8;
}
ul.apps-icons li.active a.red-icon {
    display: block;
}
ul.apps-icons li.active span a {
    color: #bf696e;
}
ul.apps-icons li.active .apps-question {
    background: #d9a5a8;
}
.apps-question {
    position: absolute;
    height: 17px;
    width: 17px;
    border-radius: 50%;
    background: #995458;
    text-align: center;
    line-height: 0.6;
    top: 5px;
    right: 10px;
}
.apps-question i {
    font-size: 12px;
}
h4.proceed-selling {
    font-size: 18px;
    line-height: 30px;
    margin-bottom: 12px;
}
/* ... */

